--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,12 +27,14 @@ jobs:
 
       # Step 4: Upload the built JAR to the EC2 instance using SCP
       - name: Upload JAR file to EC2
-        uses: scp-action/scp@v1
+        uses: appleboy/scp-action@master
         with:
-          local: target/your-app.jar  # Path to the built JAR file
-          remote: ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:/home/ubuntu/your-app.jar
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          strip_components: 1
+          port: 22
+          source: "target/SkillSpace-0.0.1-SNAPSHOT.jar" # The JAR file to be uploaded
+          target: "/home/ubuntu/SkillSpace-0.0.1-SNAPSHOT.jar" # The path on EC2 where the JAR should be placed
 
       # Step 5: SSH into the EC2 instance and run the JAR using Docker
       - name: Deploy to EC2 via SSH
